# ChangeLog for squashmount

*squashmount-15.3.0
	Martin Väth <martin at mvath.de>:
	- Prefer /sys/module over /proc/config.gz

*squashmount-15.2.1
	Martin Väth <martin at mvath.de>:
	- Fix typo in -o allow_other default (o -> -o)
	- Fix typo in lazy fusermount -u (-l -> -z)
	- Add comments about @squashorder in example config

*squashmount-15.2.0
	Martin Väth <martin at mvath.de>:
	- Improve security in provided systemd unit
	- Default timeout in systemd unit is now "only" 30 minutes

*squashmount-15.1.2
	Martin Väth <martin at mvath.de>:
	- Fix lsof check (regression from v15.1.1)

*squashmount-15.1.1
	Martin Väth <martin at mvath.de>:
	- Fix error handling with alternative binaries without File::Which

*squashmount-15.1.0
	Martin Väth <martin at mvath.de>:
	- Optionally use squashfuse_ll: -ll --no-ll; default: $squashfuse_ll

*squashmount-15.0.0
	Martin Väth <martin at mvath.de>:
	- Support mounting as a user with squashfuse.
	  See the --user option in squashmount --man
	- Introduce $lsof_ro and --lsof-ro
	- Introduce @squash_order and remove obsolete $modprobe_squash
	- Be aware the $modprobe_loop slightly changed its meaning
	- Introduce --allow and --no-allow for fine-tuning options
	- Introduce FUMOUNT, FUMOUNT_RO, @fumount, @fumount_ro,
	  and the options --fumount, --fumount-ro for fusermount -u.

*squashmount-14.1.2
	Martin Väth <martin at mvath.de>:
	- Fix perl syntax errors in example config

*squashmount-14.1.1
	Martin Väth <martin at mvath.de>:
	- Inform about found $killpower file (without -q)
	- Fix $nosquash -> $killpower in documentation

*squashmount-14.1.0
	Martin Väth <martin at mvath.de>:
	- Deal better with vanished directories

*squashmount-14.0.0
	Martin Väth <martin at mvath.de>:
	- Support KILL => -1 (and --kill-or-resquash)
	- New short options -R -l -L
	- Fix many typos in documentation

*squashmount-13.0.0
	Martin Väth <martin at mvath.de>:
	- Require perl-5.22 to use the convenient qr{...}n feature; otherwise,