@@ -1,7 +1,7 @@
 #!/usr/bin/env perl
 
 require 5.022;
-package Squashmount v15.3.0;
+package Squashmount v15.3.1;
 
 use strict;
 use warnings;
@@ -37,7 +37,7 @@ B<status>, B<forget>, B<print->I<...>
 
 =back
 
-To get an extended help, type B<squashmount man>
+To see the full manual, type B<squashmount man>
 
 =head1 DESCRIPTION
 
@@ -262,7 +262,7 @@ Output the tool actually used for mounting.
 Possible output is C<overlay>, C<overlayfs>, C<overlayfs-obsolete>, C<aufs>,
 C<unionfs-fuse>, C<unionfs>, C<funionfs>, C<bind>, C<readonly>, or the
 empty string (for not mounted or incompletely mounted; you can check
-the details with B<print-squashtype).
+the details with B<print-squashtype>).
 For usage in scripts, combine this with B<-q> and pass a tag.
 
 =item B<print-squashtype>
@@ -298,7 +298,7 @@ Print a brief help.
 
 =item B<man>
 
-Show an extended help as a manpage.
+Show the full manual.
 
 =back
 
@@ -312,7 +312,7 @@ Display brief help.
 
 =item B<--man> or B<-?>
 
-Display extended help as a manpage.
+Show the full manual.
 
 =item B<--verbose> or B<-v> (accumulative)
 
@@ -448,10 +448,10 @@ differently.
 
 =item B<--fumount-ro=>I<opt> (accumulative)
 
-Add option I<opt> to the default B<@fumount_ro array (see also B<--umount-ro>).
+Add option I<opt> to the default B<@fumount_ro> array (see also B<--umount-ro>).
 If this option is repeated, all passed options are added to the array.
-By default, this means that the option are used in the call to B<fusermount -u DIR>
-when umounting a readonly directory.
+By default, this means that the option are used in the call to
+B<fusermount -u DIR> when umounting a readonly directory.
 There might be code in B</etc/squashmount.pl> which treats this array value
 differently.
 
@@ -480,7 +480,7 @@ You can avoid this effect by specifying B<--order>
 
 =item Use default @squashorder = qw(squashfuse!!)
 
-You can avoid this effect by specfiying B<--squashorder
+You can avoid this effect by specfiying B<--squashorder>
 
 =back
 
@@ -1045,7 +1045,13 @@ see the remarks at the end of this manpage.)
 
 =item # if local/* (with * not .git, profiles, metadata) changed:
 
-=item FILL => qr{^local/(?!(\.git|profiles|metadata)(/|$))}n
+=item FILL => qr{^local/(?!(\.git|profiles|metadata)(/|$))}n,
+
+=item # The |profiles|metadata might be too much. Instead, you can be
+
+=item # be more explicit about the changes you do not care about, e.g.:
+
+=item # DIFF => qr{^local(/profiles(/use\.local\.desc)?)?$}n
 
 =back
 
